# CodexRepo

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml.example  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: api-tests.yml  docs.yml
analytics/: dbt_project.yml  profiles.yml
analytics/models/: schema.yml
analytics/models/marts/: fct_order_items.sql
analytics/models/staging/: stg_orders.sql
api/: requirements.txt
api/app/: cli.py  cli_db.py  database.py  main.py  models.py  schemas.py
api/app/core/: __init__.py  defaults.py  settings.py
api/app/db/: admin.py  session.py
api/app/models/: entities.py
api/app/routers/: entities.py
api/app/schemas/: entities.py
api/app/services/: crud.py
api/tests/: conftest.py  test_cli_db.py  test_health.py  test_products_orders.py  test_user_update_schema.py  test_users.py
app/: Dockerfile  requirements.txt  streamlit_app.py
docs/: analytics.md  api-routes.md  api.md  app.md  architecture.md  configuration.md  contributing.md  getting-started.md  index.md  orchestration.md  running-locally.md  testing.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
infra/: docker-compose.yml
orchestration/: definitions.py  requirements.txt
scripts/windows/: run_api.ps1  run_streamlit.ps1  start-api.bat  start-api.ps1  start-app.bat  start-app.ps1
