[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plataforma-crud"
version = "0.1.0"
description = "Plataforma CRUD com API FastAPI, app Streamlit, dbt e Dagster"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.35",
  "psycopg[binary]==3.2.1",
  "pydantic[email]==2.9.2",
  "streamlit==1.38.0",
  "requests==2.32.3",
  "pandas==2.2.2",
  "dagster==1.8.9",
  "dagster-webserver==1.8.9",
  "dbt-core==1.8.7",
  "dbt-duckdb==1.8.1",
  "duckdb==1.1.3",
]


[project.scripts]
crud-start = "app.cli:main"

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.2",
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.5.39",
]

[tool.setuptools]
package-dir = {"" = "api"}

[tool.setuptools.packages.find]
where = ["api"]
include = ["app*"]
